mappo/wandb/run-20240320_184835-rw453agt/files/output.log
/home/uosai/바탕화면/miniconda3/envs/simplenv/lib/python3.9/site-packages/gym/logger.py:34: UserWarning: [33mWARN: Box bound precision lowered by casting to float32
  warnings.warn(colorize("%s: %s" % ("WARN", msg % args), "yellow"))
Traceback (most recent call last):
  File "/home/uosai/바탕화면/mini-marl/mappo/main.py", line 75, in <module>
    main(sys.argv[1:])
  File "/home/uosai/바탕화면/mini-marl/mappo/main.py", line 63, in main
    from runner.shared.magym_runner import MAGYM_Runner as Runner
  File "/home/uosai/바탕화면/mini-marl/mappo/runner/shared/magym_runner.py", line 63
    print(f"Algo {self.algorithm_name} Exp {self.experiment_name} updates {episode}/{episodes} episodes, Accumulated Rewards {train_infos["episode_rewards"]} \n")
                                                                                                                                           ^
SyntaxError: f-string: unmatched '['